# n_place_platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/collector/: base.py  naver_map.py
backend/app/models/: dashboard.py  keywords.py  rankings.py  stores.py
backend/app/routers/: dashboard.py  keywords.py  rankings.py  stores.py
backend/app/scheduler/: jobs.py
backend/app/services/: dashboard_service.py  keyword_service.py  ranking_service.py  store_service.py
docs/decisions/: 001-data-collection-strategy.md  002-tech-stack.md  003-database-schema.md  004-collector-architecture.md  005-ui-design.md
docs/research/: naver-api-findings.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AddKeywordDialog.tsx  Layout.tsx  RankBadge.tsx  RankChart.tsx
frontend/src/hooks/: useKeywords.ts  useRankings.ts  useStores.ts
frontend/src/pages/: DashboardPage.tsx  KeywordSetupPage.tsx  RankHistoryPage.tsx  StoreRegisterPage.tsx
frontend/src/types/: index.ts
supabase/migrations/: 001_initial_schema.sql
